[package]
name = "bsv-wasm"
version = "1.0.1"
authors = ["Firaenix <Nick.Carton@gmail.com>"]
edition = "2018"
description = "A Bitcoin SV library with WASM in mind."
license = "MIT"
categories = ['no-std', 'bitcoin', 'bsv', 'wasm', 'crypto']

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
k256 = { version = "0.9.4", features = ["ecdsa", "ecdh"] }
wasm-bindgen = { version = "0.2.73", features = ["serde-serialize"] }
hex = "0.4.3"
console_error_panic_hook = { version = "0.1.1", optional = true }
anyhow = "1.0.38"
bs58 = "0.4.0"
snafu = { version = "0.6.10", default-features = false }
byteorder = "1.4.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "1.0"
wee_alloc = "0.4.5"
strum = "0.21.0"
strum_macros = "0.21.1"
num-traits = "0.2"
num-derive = "0.3"
aes = { version = "0.7.4", features = ["ctr"] }
block-modes = "0.8.1"
ecdsa = "0.12.2"
pbkdf2 = "0.8.0"
sha-1 = "0.9.6"
sha2 = "0.9.5"
hmac = "0.11.0"
ripemd160 = "0.9.1"
digest = "0.9.0"

[dependencies.elliptic-curve]
version = "0.10.0"
features = ["hazmat"]
default-features = true

[dependencies.rand_core]
version = "0.6.2"
features = ["getrandom"]

[dependencies.getrandom]
version = "0.2.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

[features]
default = ["console_error_panic_hook"]

[build-dependencies]
cargo-web = "0.6.26"

[build]
rustflags = ["-C", "target-feature=+simd128"]

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 3
debug = false
