[package]
name = "bsv-wasm"
version = "1.3.0-beta.5"
authors = ["Firaenix <Nick.Carton@gmail.com>"]
edition = "2021"
description = "A Bitcoin SV library with WASM in mind."
license = "MIT"
categories = ['no-std', 'bitcoin', 'bsv', 'wasm', 'crypto']

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
k256 = { version = "0.10.2", features = ["ecdsa", "ecdh", "digest", "arithmetic", "sha256"] }
ecdsa = { version = "0.13.4", features = ["sign"] }
elliptic-curve = { version = "0.11.12", features = ["dev", "ecdh"] }
hex = "^0.4"
bs58 = "^0.4.0"
thiserror = "^1.0"
byteorder = "^1.4.3"
serde = { version = "^1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = "^1.0"
ciborium = "0.2.0"
strum = "0.23.0"
strum_macros = "^0.23.1"
num-traits = "^0.2"
num-derive = "^0.3"
aes = { version = "^0.7.4", features = ["ctr"] }
block-modes = "^0.8.1"
pbkdf2 = "^0.8.0"
sha-1 = "^0.9.6"
sha2 = "^0.9.5"
hmac = "^0.11.0"
ripemd160 = "^0.9.1"
digest = "^0.9.0"
console_error_panic_hook = { version = "^0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }

[dependencies.rand_core]
version = "^0.6"
features = ["getrandom"]

[dependencies.getrandom]
version = "^0.2"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "^0.3"
rayon = "1.5"

[features]
wasm-bindgen-exports = [
    'wasm-bindgen-script-template', 
    'wasm-bindgen-script',
    'wasm-bindgen-opcodes',
    'wasm-bindgen-transaction',
    'wasm-bindgen-ecdh',
    'wasm-bindgen-ecdsa',
    'wasm-bindgen-bsm',
    'wasm-bindgen-ecies',
    'wasm-bindgen-keypair',
    'wasm-bindgen-address',
    'wasm-bindgen-signature',
    'wasm-bindgen-kdf',
    'wasm-bindgen-hash',
    'wasm-bindgen-encryption'
]
wasm-bindgen-script-template = ['wasm-bindgen-script']
wasm-bindgen-script = ['wasm-bindgen-opcodes']
wasm-bindgen-opcodes = []
wasm-bindgen-transaction = ['wasm-bindgen-signature', 'wasm-bindgen-keypair', 'wasm-bindgen-ecdsa']
wasm-bindgen-ecdh = ['wasm-bindgen-ecdsa', 'wasm-bindgen-keypair']
wasm-bindgen-ecdsa = ['wasm-bindgen-signature', 'wasm-bindgen-keypair']
wasm-bindgen-bsm = ['wasm-bindgen-signature', 'wasm-bindgen-keypair', 'wasm-bindgen-ecdsa']
wasm-bindgen-ecies = ['wasm-bindgen-keypair', 'wasm-bindgen-ecdsa']
wasm-bindgen-keypair = ['wasm-bindgen-address', 'wasm-bindgen-ecies']
wasm-bindgen-address = ['wasm-bindgen-signature', 'wasm-bindgen-keypair']
wasm-bindgen-signature = ['wasm-bindgen-keypair']
wasm-bindgen-kdf = ['wasm-bindgen-hash']
wasm-bindgen-hash = []
wasm-bindgen-encryption = []

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/bsvwasm/wasm-bindgen", branch = "universal-ui64-patch" }

[build]
rustflags = ["-C", "target-feature=+simd128"]

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 3
debug = false
