[package]
name = "bsv"
version = "2.0.2"
authors = ["Firaenix <Nick.Carton@gmail.com>"]
edition = "2021"
description = "A Bitcoin stdlib"
repository = "https://github.com/Firaenix/bsv-wasm"
license = "MIT"
categories = ["api-bindings", "cryptography::cryptocurrencies", "network-programming", "wasm"]
keywords = ["bitcoin", "bsv", "blockchain", "bitcoin-cash"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
k256 = { version = "0.10.2", features = [
  "ecdsa",
  "ecdh",
  "digest",
  "arithmetic",
  "sha256",
] }
ecdsa = { version = "0.13.4", features = ["sign"] }
elliptic-curve = { version = "0.11.12", features = ["dev", "ecdh"] }
hex = "^0.4"
bs58 = "^0.4.0"
thiserror = "^1.0"
byteorder = "^1.4.3"
serde = { version = "^1.0", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = "^1.0"
ciborium = "0.2.0"
strum = "0.23.0"
strum_macros = "^0.23.1"
num-traits = "^0.2"
num-derive = "^0.3"
aes = { version = "^0.7.4", features = ["ctr"] }
block-modes = "^0.8.1"
pbkdf2 = "^0.8.0"
sha-1 = "^0.9.6"
sha2 = "^0.9.5"
hmac = "^0.11.0"
ripemd160 = "^0.9.1"
digest = "^0.9.0"
num-bigint = "0.4"

[dependencies.rand_core]
version = "^0.6"
features = ["getrandom"]

[dependencies.getrandom]
version = "^0.2"
# features = ["js"]

[dev-dependencies]
# wasm-bindgen-test = "^0.3"
rayon = "1.5"

[build]
rustflags = ["-C", "target-feature=+simd128"]

[profile.release]
opt-level = 3
lto = true

[profile.test]
opt-level = 3
debug = false
