[package]
name = "wasm-address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.81"
bsv-wasm = { path = "../..", features = ["wasm-bindgen-script", "wasm-bindgen-transaction", "wasm-bindgen-script-template"] }
serde-wasm-bindgen = "0.4.3"
